fix: Align spinner for reset session in participant's devices (#2950)

--- a/app/style/panel/participant-devices.less
+++ b/app/style/panel/participant-devices.less
@@ -95,4 +95,11 @@
     display: flex;
     justify-content: space-between;
   }
+
+  &__actions {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50%;
+  }
 }
